--- a/frontend/todo/src/app/components/header/header.component.html
+++ b/frontend/todo/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header">
+<mat-toolbar class="header mat-elevation-z8" color="primary">
     <span>
         <img src="assets/img/to-do-list.png" alt="Todo logo">
     </span>
